src/style.css
/* ... */
.task > .description-content {
    grid-area: 4 / 1 / 5 / 3;
}

.task > .priority {
    height: 1.1rem;
    grid-area: 5 / 1 / 6 / 2;
}

.task > .priority-content {
    grid-area: 6 / 1 / 7 / 3;
}

.task > .notes {
    height: 1.1rem;
    grid-area: 7 / 1 / 8 / 2;
}

.task > .notes-content {
    grid-area: 8 / 1 / 9 / 3;
}

.task > .status-content {
    height: 1.1rem;
    grid-area: 11 / 1 / 12 / 3;
    cursor: pointer;
    width: min-content;
    justify-self: center;
}

.task > .edit-task,
.affirm {
    grid-area: 9 / 1 / 10 / 3;
    width: 175px;
    background-color: #174842;
    color: white;
}

.task > .move-task {
    grid-area: 10 / 1 / 11 / 2;
    width: 100px;
    background-color: #516271;
    color: white;
}

.task > .delete-task,
.deny {
    grid-area: 10 / 2 / 11 / 3;
    width: 100px;
    background-color: #d2d97a;
    color: rgb(128, 0, 0);
}

.task > button,
.affirm,
.deny {
    border: 1px solid black;
    height: 2rem;
    font-size: 1.4rem;
    font-weight: bold;
    justify-self: center;
    margin: 0;
    border-radius: 8px;
    cursor: pointer;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
    transition: background-color 0.3s ease, transform 0.2s ease;
}

.task > button:hover,
.affirm:hover,
.deny:hover {
    transform: translateY(-1px);
    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
}

.task > button:active,
.affirm:active,
.deny:active {
    transform: scale(0.95);
    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
}

.task > .due,
.task > .description,
.task > .priority,
.task > .notes {
    font-weight: bold;
}

::backdrop {
    background-color: #516271b9;
}

dialog[open] {
    background-color: #faf2e9;
    height: clamp(375px, 40%, 600px);
    width: clamp(350px, 50%, 1000px);
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    border-radius: 8px;
    padding: 12px;
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.25);
    border: none;
    font-size: 1.2rem;
}

dialog h3 {
    text-align: center;
    font-size: 2rem;
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    height: 4.5rem;
    line-height: 2.2rem;
    color: #333;
    margin-bottom: 15px;
}

dialog label {
    font-size: 1.2rem;
    font-weight: bold;
    display: block;
    color: #444;
}

.input-wrapper {
    position: relative;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.input-wrapper input {
    padding: 8px;
    width: 90%;
    font-size: 1rem;
    border: 2px solid #ccc;
    border-radius: 4px;
    transition: border-color 0.3s ease;
}

.input-wrapper input:focus {
    border-color: #007bff;
    outline: none;
}

.error-message {
    display: none;
    color: red;
    font-size: 12px;
}

.input-wrapper input.not-long-enough-error + .error-message {
    display: block;
    position: absolute;
    top: -20px;
    right: 0;
}

.button-wrapper {
    display: flex;
    flex-wrap: wrap;
    row-gap: 8px;
    justify-content: space-around;
}

.affirm,
.deny {
    width: 200px;
}

dialog input,
dialog textarea,
dialog select {
    width: 100%;
    padding: 4px;
    font-size: 1rem;
    border: 2px solid #ccc;
    border-radius: 4px;
    transition: border-color 0.3s ease;
}

dialog input:focus,
dialog textarea:focus,
dialog select:focus {
    border-color: #007bff;
    outline: none;
}

dialog fieldset {
    border: 2px solid #ccc;
    border-radius: 4px;
    padding: 10px;
    height: 125px;
}

dialog legend {
    font-size: 1.2rem;
    font-weight: bold;
    color: #444;
}

#task-status div {
    padding: 8px 0;
    display: grid;
    grid-template-columns: 1fr 15px;
    grid-template-rows: 1fr;
    align-items: center;
}

#task-status label {
    grid-area: 1 / 1 / 2 / 2;
    margin: 0;
}

#task-status input {
    grid-area: 1 / 2 / 2 / 3;
    margin: 0;
    justify-self: end;
}

#task-modal[open] {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 2.3rem;
    gap: 16px;
    width: 95vw;
}

#task-modal h3 {
    -webkit-line-clamp: 1;
    height: 2.2rem;
}

#task-modal form {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    justify-content: space-between;
    align-items: center;
    align-content: space-around;
}

#task-title {
    flex: 1 1 400px;
    order: 0;
    height: 2.5rem;
}

#task-due-date {
    flex: 0 1 150px;
    order: 0;
    height: 2.5rem;
}

#task-priority {
    flex: 0 1 150px;
    order: 0;
    height: 2.5rem;
}

#task-description {
    flex: 0 1 100%;
    order: 1;
}

#task-notes {
    flex: 0 1 calc(100% - 200px);
    order: 1;
}

#task-status {
    flex: 0 1 175px;
    order: 2;
}

#task-modal .button-wrapper {
    flex: 0 1 100%;
    order: 2;
    display: flex;
    align-items: center;
}

@media screen and (max-width: 650px) {
    #site {
        grid-template-columns: 100vw;
        grid-template-rows: 150px min-content min-content;
    }

    header {
        grid-area: 1 / 1 / 2 / 2;
        grid-template-columns: 100%;
        grid-template-rows: min-content;
    }

    .logo {
        display: none;
    }

    .sidebar {
        grid-area: 2 / 1 / 3 / 2;
        border-right: none;
        border-bottom: 1px dashed #174842;
    }

    .project-list {
        width: 100%;
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
        grid-template-rows: repeat(auto-fit, min-content);
        padding: 15px;
    }

    .project-list > [data-id="unassignedTasks"] {
        height: 175px;
    }

    .content {
        grid-area: 3 / 1 / 4 / 2;
        display: grid;
        grid-template-columns: 100%;
        grid-template-rows: 50px 1fr;
        gap: 15px;
    }

    .task-list {
        padding: 0 30px;
    }

    .task,
    .project {
        width: 250px;
        justify-self: center;
    }

    #task-notes {
        flex: 0 1 100%;
    }
}

